manifests/network-polisies/allow-backend-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-backend-engress-dns
spec:
  podSelector:
    matchLabels:
      app: finflow-backend
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector: 
            matchLabels: 
               kubernetes.io/metadata.name: kube-system
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
