manifests/network-polisies/allow-backend-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-backend-to-postgres
spec:
  podSelector:
    matchLabels:
      app: finflow-backend
  policyTypes:
    - Egress
  egress:
   - to:
     - podSelector:
        matchLabels:
          app: postgres
     ports:
     - port: 5432
