manifests/network-polisies/allow-frontend-egress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-frontend-egress-backend
spec:
  podSelector:
    matchLabels:
      app: finflow-frontend
  policyTypes:
   - Egress
  egress:
   - to:
     - podSelector:
         matchLabels:
            app: finflow-backend
     ports: 
      - port: 5000
