manifests/network-polisies/allow-frontend-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-dns
spec:
  podSelector:
    matchLabels:
      app: finflow-frontend
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
           kubernetes.io/metadata.name: kube-system
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
