manifests/network-polisies/allow-frontend-engress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-frontend-taking-outertrafic
spec:
  podSelector:
    matchLabels:
       app: finflow-frontend
  policyTypes:
    - Ingress 
  ingress:
     - {}
