manifests/network-polisies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-from-ps
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
   - Ingress
  ingress:
   - from:
     - podSelector:
        matchLabels:
          app: finflow-backend
